<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvPastelchoclo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/pastel_de_choclo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgrestaurant" />

    <TextView
        android:id="@+id/tvCazuela"
        android:layout_width="107dp"
        android:layout_height="19dp"
        android:layout_marginTop="62dp"
        android:text="@string/cazuela"
        app:layout_constraintStart_toStartOf="@+id/tvPrecioPastel"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecioPastel" />

    <ImageView
        android:id="@+id/imgpastel"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="202dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pastel" />

    <ImageView
        android:id="@+id/imgcazuela"
        android:layout_width="94dp"
        android:layout_height="121dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/imgpastel"
        app:layout_constraintTop_toBottomOf="@+id/imgpastel"
        app:srcCompat="@drawable/cazuela" />

    <ImageView
        android:id="@+id/imgrestaurant"
        android:layout_width="258dp"
        android:layout_height="109dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imgrestaurant" />

    <TextView
        android:id="@+id/tvcantChoclo"
        android:layout_width="31dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:text="@string/cant"
        app:layout_constraintStart_toStartOf="@+id/tvPastelchoclo"
        app:layout_constraintTop_toBottomOf="@+id/tvPastelchoclo" />

    <TextView
        android:id="@+id/tvPrecioPastel"
        android:layout_width="55dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/_12000"
        app:layout_constraintStart_toStartOf="@+id/tvcantChoclo"
        app:layout_constraintTop_toBottomOf="@+id/tvcantChoclo" />

    <TextView
        android:id="@+id/tvcantCazuela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cant"
        app:layout_constraintStart_toStartOf="@+id/tvCazuela"
        app:layout_constraintTop_toBottomOf="@+id/tvCazuela" />

    <TextView
        android:id="@+id/tvprecioCazuela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/_10000"
        app:layout_constraintStart_toStartOf="@+id/tvcantCazuela"
        app:layout_constraintTop_toBottomOf="@+id/tvcantCazuela" />

    <TextView
        android:id="@+id/tvcomida"
        android:layout_width="68dp"
        android:layout_height="22dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="64dp"
        android:text="@string/comida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgcazuela" />

    <TextView
        android:id="@+id/tvpropinas"
        android:layout_width="68dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/propina"
        app:layout_constraintStart_toStartOf="@+id/tvcomida"
        app:layout_constraintTop_toBottomOf="@+id/tvcomida" />

    <EditText
        android:id="@+id/etCantPastel"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="2"
        android:hint="@string/cantidadpastelchoclo"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toEndOf="@+id/tvcantChoclo"
        app:layout_constraintTop_toBottomOf="@+id/tvPastelchoclo" />

    <EditText
        android:id="@+id/etCantCazuela"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="2"
        android:inputType="number"
        android:hint="cantidadcazuela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toEndOf="@+id/tvcantCazuela"
        app:layout_constraintTop_toBottomOf="@+id/tvCazuela" />

    <Switch
        android:id="@+id/switchCalcularPropina"
        android:layout_width="62dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="204dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgcazuela"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tvTotalCompras"
        android:layout_width="156dp"
        android:layout_height="33dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="76dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvpropina" />

    <Button
        android:id="@+id/btnCalcularTotalPlatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="48dp"
        android:text="@string/totales"
        app:layout_constraintEnd_toStartOf="@+id/tvTotalCompras"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchCalcularPropina" />

    <TextView
        android:id="@+id/tvtotal"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="cantidad"
        app:layout_constraintStart_toEndOf="@+id/tvcomida"
        app:layout_constraintTop_toBottomOf="@+id/tvprecioCazuela" />

    <TextView
        android:id="@+id/tvpropina"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/monto"
        app:layout_constraintStart_toStartOf="@+id/tvtotal"
        app:layout_constraintTop_toBottomOf="@+id/tvtotal" />

</androidx.constraintlayout.widget.ConstraintLayout>